--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
 /*page index*/
 
-/* body{
-    background-color:pink;
+ body{
+    /* background-color:rgb(242, 234, 247); */
+    background-color: rgb(204, 243, 239);
 }
 
-.header{
-    background-color: ;
-    
+ .bg-light{    
+    background-color:#343a40!important;
+    } 
+.jumbotron{
+    background-color:white!important;
+}
 
-    }
-
-.footer{
-background-color: ;
-}    
- */
+ .card_lien{
+     display:block;
+     position:absolute;
+     z-index:2;
+     width: 100%;
+     Height:100%;
+ } 
